--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run nodemon",
     "dev": "node ./api/api.js",
-    "nodemon": "nodemon --exec npm run dev",
+    "nodemon": "nodemon --ignore './api/models/bmi/' --exec npm run dev",
     "lint": "eslint ./api. ./config/."
   },
   "repository": {
@@ -27,6 +27,7 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "csv-parse": "^4.12.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.10",
