--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-fileupload": "^1.1.10",
     "helmet": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "nats": "^1.4.12",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.4",
