--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.10",
+    "greenlock-express": "^4.0.3",
     "helmet": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
